--- a/Group  Project/Contact.html
+++ b/Group  Project/Contact.html
@@ -417,7 +417,7 @@
       <header align="left" style="background-image: url('26.jpg');color: white; background-repeat: no-repeat;
       background-position: center;background-size: cover;height:500px;padding:100px;font-size:25px;">
 <h1 style="color:orangered;">
-  MA-KORP0 RESTAURENT<br>
+  TERRICK RESTAURENT<br>
   SINKOR, MONROVIA LIBERIA <br>
 TASTE OF YOUR CHOICE</h1>
 <br><br><br><br><br>
