--- a/Group  Project/Index.html
+++ b/Group  Project/Index.html
@@ -419,7 +419,7 @@ footer {
       <header align="left" style="background-image: url('26.jpg');color: white; background-repeat: no-repeat;
       background-position: center;background-size: cover;height:500px;padding:100px;font-size:25px;">
 <h1 style="color:orangered;">
-  MA-KORP0 RESTAURENT<br>
+  TERRICK RESTAURENT<br>
   SINKOR, MONROVIA LIBERIA <br>
 TASTE OF YOUR CHOICE</h1>
 <br>
@@ -443,7 +443,7 @@ TASTE OF YOUR CHOICE</h1>
 	     <main>
 	   <!--Banner Section-->
 	   <div class="intro_b">
-	   <h1> WELCOME TO MA-KORP0 RESTAURENT </h1> 
+	   <h1> WELCOME TO TERRICK RESTAURENT </h1> 
 	   </div>
 		   <div class="slideshow">
 		   <script type="text/javascript">
